add_subdirectory (libJModule)

set (
	JMADF_SRC
	${LIBJMODULE_JMADF_SRC}
	${CMAKE_CURRENT_SOURCE_DIR}/JMADF.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/JMADF.h
	${CMAKE_CURRENT_SOURCE_DIR}/JModule.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/JModule.h
	${CMAKE_CURRENT_SOURCE_DIR}/ModuleList.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ModuleList.h
	${CMAKE_CURRENT_SOURCE_DIR}/ModulePool.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ModulePool.h
	CACHE STRING INTERNAL
)
